--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,5 +1,7 @@
+@import "variables.scss";
 @import "~bootstrap/scss/bootstrap";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css");
 
 body {
-    background-color: lightgray;
+    background-color: $primary;
 }
