--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,7 +1,19 @@
 @import "variables.scss";
 @import "~bootstrap/scss/bootstrap";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css");
+@import "navbar.scss";
 
 body {
-    background-color: $primary;
+    background-color: $light;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span,
+div {
+    font-family: $font;
 }
