--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body %}
-	<main class="bg-primary">
+	<main class="">
 		<h1 class="text-secondary"><i class="bi bi-align-top"></i>sgds</h1>
 	</main>
 {% endblock %}
