--- a/templates/items/_navbar.html.twig
+++ b/templates/items/_navbar.html.twig
@@ -1,20 +1,22 @@
-<div class="topHeader bg-secondary d-flex justify-content-center align-items-center p-2">
-	<img class="logoText mx-3" src="{{ asset('build/images/VDS_Horizontal_Complet_Terre.svg') }}" alt="Logo et texte header"/>
-	<span class="text-primary fs-3 mx-3">Jennifer Quenault - Réflexologie</span>
-</div>
-<nav class="navbar navbar-expand-lg navbar-primary bg-primary sticky-top p-0">
-	<div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-light bg-secondary sticky-top p-0 d-flex flex-column">
+	<div class="topHeader bg-primary d-flex justify-content-center align-items-center p-3 w-100">
+		<img class="logoText mx-3" src="{{ asset('build/images/VDS_Horizontal_Complet_Marigold.svg') }}" alt="Logo et texte header"/>
+		<span class="text-secondary fs-3 mx-3">Jennifer Quenault - Réflexologie</span>
+	</div>
+	<div class="align-self-end align-self-lg-center ms-auto">
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<a class="nav-link text-secondary" href="#">Accueil</a>
-			<a class="nav-link text-secondary" href="#">Mon parcours</a>
-			<a class="nav-link text-secondary" href="#">Reflexologie</a>
-			<a class="nav-link text-secondary" href="#">Prestations</a>
-			<a class="nav-link text-secondary" href="#">Tarifs</a>
-			<a class="nav-link text-secondary" href="#">Offrir</a>
-			<a class="nav-link text-secondary" href="#">Contact</a>
+			<div class="navbar-nav">
+				<a class="nav-link text-primary" href="{{ path('home') }}">Accueil</a>
+				<a class="nav-link text-primary" href="{{ path('journey') }}">Mon parcours</a>
+				<a class="nav-link text-primary" href="#">Reflexologie</a>
+				<a class="nav-link text-primary" href="#">Prestations</a>
+				<a class="nav-link text-primary" href="#">Tarifs</a>
+				<a class="nav-link text-primary" href="#">Offrir</a>
+				<a class="nav-link text-primary" href="{{ path('contact') }}">Contact</a>
+			</div>
 		</div>
 	</div>
 </nav>
