--- a/templates/items/_navbar.html.twig
+++ b/templates/items/_navbar.html.twig
@@ -3,7 +3,7 @@
 		<img class="logoText mx-3" src="{{ asset('build/images/VDS_Horizontal_Complet_Marigold.svg') }}" alt="Logo et texte header"/>
 		<span class="text-secondary fs-3 mx-3">Jennifer Quenault - Réflexologie</span>
 	</div>
-	<div class="align-self-end align-self-lg-center ms-auto">
+	<div class="align-self-end align-self-lg-center">
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
