--- a/assets/styles/navbar.scss
+++ b/assets/styles/navbar.scss
@@ -1,14 +1,13 @@
 @import "variables.scss";
 
 .topHeader {
+    box-shadow: 0px 0px 8px -2px $primary;
+
     img {
         height: 100px;
     }
 }
 
 .navbar {
-
-    img {
-        height: 50px;
-    }
+    box-shadow: 0px 0px 8px -2px $secondary;
 }
