--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,5 +21,8 @@
 			{% include "items/_navbar.html.twig" %}
 		{% endblock %}
 		{% block body %}{% endblock %}
+		{% block footer %}
+			{% include "items/_footer.html.twig" %}
+		{% endblock %}
 	</body>
 </html>
