fix navbar title size

--- a/templates/items/_navbar.html.twig
+++ b/templates/items/_navbar.html.twig
@@ -9,13 +9,13 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<div class="navbar-nav">
-				<a class="nav-link text-primary" href="{{ path('home') }}">Accueil</a>
-				<a class="nav-link text-primary" href="{{ path('journey') }}">Mon parcours</a>
-				<a class="nav-link text-primary" href="#">Reflexologie</a>
-				<a class="nav-link text-primary" href="#">Prestations</a>
-				<a class="nav-link text-primary" href="#">Tarifs</a>
-				<a class="nav-link text-primary" href="#">Offrir</a>
-				<a class="nav-link text-primary" href="{{ path('contact') }}">Contact</a>
+				<a class="nav-link text-primary fs-5" href="{{ path('home') }}">Accueil</a>
+				<a class="nav-link text-primary fs-5" href="{{ path('journey') }}">Mon parcours</a>
+				<a class="nav-link text-primary fs-5" href="#">Reflexologie</a>
+				<a class="nav-link text-primary fs-5" href="#">Prestations</a>
+				<a class="nav-link text-primary fs-5" href="#">Tarifs</a>
+				<a class="nav-link text-primary fs-5" href="#">Offrir</a>
+				<a class="nav-link text-primary fs-5" href="{{ path('contact') }}">Contact</a>
 			</div>
 		</div>
 	</div>
