created entity actuality

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,6 +8,6 @@
 
 {% block body %}
 	<main class="">
-		<h1 class="text-secondary"><i class="bi bi-align-top"></i>sgds</h1>
+		<h1 class="text-secondary">Bienvenue</h1>
 	</main>
 {% endblock %}
