--- a/templates/items/_footer.html.twig
+++ b/templates/items/_footer.html.twig
@@ -9,7 +9,7 @@
 			<i class="bi bi-envelope-fill me-3"></i>voyagedessens.reflexo@gmail.com</span>
 	</div>
 	<div class="networks d-flex flex-column align-items-center">
-		<span class="text-light fs-4 m-1 mt-3">Suivez-moi sur mes réseaux !</span>
+		<span class="text-light fs-4 m-1 mt-3">Retrouvez-moi sur mes réseaux</span>
 		<div class="links d-flex w-100 justify-content-around my-1">
 			<a href="https://www.instagram.com/voyage_des_sens_reflexologie/" class="instagram" target="_blank">
 				<i class="bi bi-instagram fs-2"></i>
