--- a/templates/items/_navbar.html.twig
+++ b/templates/items/_navbar.html.twig
@@ -1,7 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-secondary sticky-top p-0 d-flex flex-column">
 	<div class="topHeader bg-primary d-flex justify-content-center align-items-center p-3 w-100">
 		<img class="logoText mx-3" src="{{ asset('build/images/VDS_Horizontal_Complet_Marigold.svg') }}" alt="Logo et texte header"/>
-		<span class="text-secondary fs-3 mx-3">Jennifer Quenault - Réflexologie</span>
+		<div class="navbarText d-flex flex-column">
+			<span class="text-secondary fs-3 mx-3">Jennifer Quenault - Réflexologue</span>
+			<span class="text-secondary fs-4 mx-3 ms-5"><i>La réflexologie, c'est super bien je trouve</i></span>
+		</div>
 	</div>
 	<div class="align-self-end align-self-lg-center">
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,7 +14,7 @@
 			<div class="navbar-nav">
 				<a class="nav-link text-primary fs-5" href="{{ path('home') }}">Accueil</a>
 				<a class="nav-link text-primary fs-5" href="{{ path('journey') }}">Mon parcours</a>
-				<a class="nav-link text-primary fs-5" href="#">Reflexologie</a>
+				<a class="nav-link text-primary fs-5" href="#">Réflexologie</a>
 				<a class="nav-link text-primary fs-5" href="#">Prestations</a>
 				<a class="nav-link text-primary fs-5" href="#">Tarifs</a>
 				<a class="nav-link text-primary fs-5" href="#">Offrir</a>
