too many things

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -6,6 +6,9 @@
 
 body {
     background-color: $light;
+    background-image: url("../images/VDS_Motif_Marigold.svg");
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 h1,
