--- a/templates/items/_footer.html.twig
+++ b/templates/items/_footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="footer container-fluid footer-expand-lg bg-primary sticky-bottom d-flex justify-content-around" id="footer">
+<footer class="footer container-fluid footer-expand-lg bg-primary sticky-bottom d-flex justify-content-around mt-5" id="footer">
 	<div class="details d-flex flex-column">
 		<span class="text-center m-1 mt-3 text-light fs-4">Jennifer Quenault - Réflexologue</span>
 		<span class="m-1 text-light">
