--- a/templates/actuality/index.html.twig
+++ b/templates/actuality/index.html.twig
@@ -1,20 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ActualityController!{% endblock %}
+{% block title %}Actualités -
+	{{ parent() }}
+{% endblock %}
+
+{% block stylesheets %}
+	{{ encore_entry_link_tags('home') }}
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/thibault/WCS/Checkpoint/Checkpoint4/src/Controller/ActualityController.php'|file_link(0) }}">src/Controller/ActualityController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/thibault/WCS/Checkpoint/Checkpoint4/templates/actuality/index.html.twig'|file_link(0) }}">templates/actuality/index.html.twig</a></code></li>
-    </ul>
-</div>
+	<h1 class="text-primary text-center my-3">Toutes les actualités</h1>
+	<div class="d-flex flex-column align-items-center">
+		{% include "items/_actualityCards.html.twig" %}
+	</div>
 {% endblock %}
