--- a/templates/admin_actuality/_delete_form.html.twig
+++ b/templates/admin_actuality/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('admin_actuality_delete', {'id': actuality.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ actuality.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger my-3 fs-4"><i class="bi bi-trash"></i></button>
 </form>
