--- a/templates/admin_actuality/_form.html.twig
+++ b/templates/admin_actuality/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-success"><i class="bi bi-save-fill me-2"></i>{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
