--- a/templates/admin_actuality/edit.html.twig
+++ b/templates/admin_actuality/edit.html.twig
@@ -1,13 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Actuality{% endblock %}
+{% block title %}Edition actualité -
+	{{ parent() }}
+{% endblock %}
+
+{% block stylesheets %}
+	{{ encore_entry_link_tags('edit') }}
+{% endblock %}
 
 {% block body %}
-    <h1>Edit Actuality</h1>
-
-    {{ include('admin_actuality/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('admin_actuality_index') }}">back to list</a>
-
-    {{ include('admin_actuality/_delete_form.html.twig') }}
+	<main class="container my-5">
+		<h1 class="text-center text-secondary">Edition actualité</h1>
+		{{ include('admin_actuality/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+		<div class="d-flex justify-content-start">
+			<a class="btn btn-primary mt-3" href="{{ path('admin_actuality_index') }}"><i class="bi bi-caret-left-square-fill me-2"></i>Retour à la liste</a>
+		</div>
+	</main>
 {% endblock %}
