--- a/templates/admin_actuality/index.html.twig
+++ b/templates/admin_actuality/index.html.twig
@@ -1,43 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Actuality index{% endblock %}
+{% block title %}Admin Actualités -
+	{{ parent() }}
+{% endblock %}
 
 {% block body %}
-    <h1>Actuality index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Content</th>
-                <th>CreatedAt</th>
-                <th>Picture</th>
-                <th>UpdatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for actuality in actualities %}
-            <tr>
-                <td>{{ actuality.id }}</td>
-                <td>{{ actuality.title }}</td>
-                <td>{{ actuality.content }}</td>
-                <td>{{ actuality.createdAt ? actuality.createdAt|date('Y-m-d') : '' }}</td>
-                <td>{{ actuality.picture }}</td>
-                <td>{{ actuality.updatedAt ? actuality.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('admin_actuality_show', {'id': actuality.id}) }}">show</a>
-                    <a href="{{ path('admin_actuality_edit', {'id': actuality.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('admin_actuality_new') }}">Create new</a>
+	<main class="container my-5">
+		<h1 class="text-primary text-center my-3">Administration actualités</h1>
+		<a class="btn btn-primary fs-5" href="{{ path('admin_actuality_new') }}"><i class="bi bi-file-earmark-plus-fill me-2 fs-4"></i>Nouvelle actualité</a>
+		<div class="d-flex flex-column align-items-center">
+			{% include "admin_actuality/_adminActualityCards.html.twig" %}
+		</div>
+	</main>
 {% endblock %}
