--- a/templates/items/_navbar.html.twig
+++ b/templates/items/_navbar.html.twig
@@ -3,7 +3,7 @@
 		<img class="logoText mx-3" src="{{ asset('build/images/VDS_Horizontal_Complet_Marigold.svg') }}" alt="Logo et texte header"/>
 		<div class="navbarText d-flex flex-column">
 			<span class="text-light fs-3 mx-3">Jennifer Quenault - Réflexologue</span>
-			<span class="text-light fs-4 mx-3 ms-5"><i>La réflexologie, c'est super bien je trouve</i></span>
+			<span class="text-light fs-5 mx-3 ms-5"><i>"La réflexologie, c'est super bien je trouve"</i></span>
 		</div>
 	</div>
 	<div class="align-self-end align-self-lg-center">
