--- a/templates/items/_navbar.html.twig
+++ b/templates/items/_navbar.html.twig
@@ -15,7 +15,7 @@
 				<a class="nav-link text-primary fs-5 ms-1" href="{{ path('home') }}">Accueil</a>
 				<a class="nav-link text-primary fs-5 ms-1" href="{{ path('journey') }}">Mon parcours</a>
 				<a class="nav-link text-primary fs-5 ms-1" href="#">Réflexologie</a>
-				<a class="nav-link text-primary fs-5 ms-1" href="#">Prestations</a>
+				<a class="nav-link text-primary fs-5 ms-1" href="{{ path('session_index') }}">Prestations</a>
 				<a class="nav-link text-primary fs-5 ms-1" href="#">Tarifs</a>
 				<a class="nav-link text-primary fs-5 ms-1" href="#">Offrir</a>
 				<a class="nav-link text-primary fs-5 ms-1" href="{{ path('contact') }}">Contact</a>
