--- a/templates/items/_actualityCards.html.twig
+++ b/templates/items/_actualityCards.html.twig
@@ -1,9 +1,10 @@
 {% for actuality in actualities %}
-	<div class="actuCard row col-10 d-flex my-3 rounded border border-secondary bg-light">
+	<div class="actuCard row d-flex my-3 rounded border border-secondary bg-light">
 		<img class="img-fluid col-3 p-0 rounded-start" src={% if actuality.picture is defined %} "{{ vich_uploader_asset(actuality, 'pictureFile') }}" {% endif %} alt="">
 		<div class="col-9 d-flex flex-column">
 			<h5 class="fs-3 m-1">{{ actuality.title }}</h5>
 			<p class="m-1">{{ actuality.content }}</p>
+			<span class="m-1">{{ actuality.createdAt|date() }}</span>
 			<a href="{{ path('actuality_show', {'id': actuality.id}) }}" class="btn btn-primary align-self-end">Voir</a>
 		</div>
 	</div>
