--- a/assets/styles/session.scss
+++ b/assets/styles/session.scss
@@ -1,8 +1,8 @@
 @import "variables.scss";
 
 .sessionsBody {
-    background-image     : url("../images/VDS_Motif_Terre.svg");
-    background-size      : cover;
+    // background-image     : url("../images/VDS_Motif_Terre.svg");
+    // background-size      : cover;
 
     h2 {
         border-bottom: 4px solid $secondary;
