--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,7 @@
 		{% block navbar %}
 			{% include "items/_navbar.html.twig" %}
 		{% endblock %}
+		{% block header %}{% endblock %}
 		<main class="container"> {% block body %}{% endblock %}
 			</main>
 			{% block footer %}
