--- a/templates/items/_navbar.html.twig
+++ b/templates/items/_navbar.html.twig
@@ -2,8 +2,8 @@
 	<div class="topHeader bg-primary d-flex justify-content-center align-items-center p-3 w-100">
 		<img class="logoText mx-3" src="{{ asset('build/images/VDS_Horizontal_Complet_Marigold.svg') }}" alt="Logo et texte header"/>
 		<div class="navbarText d-flex flex-column">
-			<span class="text-light fs-3 mx-3">Jennifer Quenault - Réflexologue</span>
-			<span class="text-light fs-5 mx-3 ms-5"><i>"La réflexologie, c'est super bien je trouve"</i></span>
+			<span class="text-light fs-3 mx-3">Jennifer Quenault</span>
+			<span class="text-light fs-5 mx-3"><i>Réflexologue</i></span>
 		</div>
 	</div>
 	<div class="align-self-end align-self-lg-center">
@@ -12,14 +12,14 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<div class="navbar-nav">
-				<a class="nav-link text-primary fs-5 ms-1" href="{{ path('home') }}">Accueil</a>
-				<a class="nav-link text-primary fs-5 ms-1" href="{{ path('journey') }}">Mon parcours</a>
-				<a class="nav-link text-primary fs-5 ms-1" href="#">Réflexologie</a>
-				<a class="nav-link text-primary fs-5 ms-1" href="{{ path('session_index') }}">Prestations</a>
-				<a class="nav-link text-primary fs-5 ms-1" href="#">Tarifs</a>
-				<a class="nav-link text-primary fs-5 ms-1" href="#">Offrir</a>
-				<a class="nav-link text-primary fs-5 ms-1" href="{{ path('contact') }}">Contact</a>
-				<a class="nav-link text-primary fs-5 ms-1" href="{{ path('actuality_index') }}">Actualités</a>
+				<a class="nav-link text-primary fs-4 ms-1" href="{{ path('home') }}">Accueil</a>
+				<a class="nav-link text-primary fs-4 ms-1" href="{{ path('journey') }}">Mon parcours</a>
+				<a class="nav-link text-primary fs-4 ms-1" href="#">Réflexologie</a>
+				<a class="nav-link text-primary fs-4 ms-1" href="{{ path('session_index') }}">Prestations</a>
+				<a class="nav-link text-primary fs-4 ms-1" href="#">Tarifs</a>
+				<a class="nav-link text-primary fs-4 ms-1" href="#">Offrir</a>
+				<a class="nav-link text-primary fs-4 ms-1" href="{{ path('contact') }}">Contact</a>
+				<a class="nav-link text-primary fs-4 ms-1" href="{{ path('actuality_index') }}">Actualités</a>
 			</div>
 		</div>
 	</div>
