--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,8 +8,12 @@
 {% block stylesheets %}
 	{{ encore_entry_link_tags('home') }}
 {% endblock %}
+{% block header %}
+	{% include "items/_header.html.twig" %}
+{% endblock %}
 
 {% block body %}
+
 	<h1 class="text-secondary text-center my-3">Bienvenue</h1>
 	<div class="d-flex flex-column align-items-center">
 		{% include "items/_actualityCards.html.twig" %}
