--- a/templates/items/_footer.html.twig
+++ b/templates/items/_footer.html.twig
@@ -8,17 +8,27 @@
 		<span class="m-1 mb-3 text-light">
 			<i class="bi bi-envelope-fill me-3"></i>voyagedessens.reflexo@gmail.com</span>
 	</div>
-	<div class="networks d-flex flex-column align-items-center">
-		<span class="text-light fs-4 m-1 mt-3">Retrouvez-moi sur mes réseaux</span>
-		<div class="links d-flex w-100 justify-content-around my-1">
-			<a href="https://www.instagram.com/voyage_des_sens_reflexologie/" class="instagram" target="_blank">
-				<i class="bi bi-instagram fs-2"></i>
-			</a>
-			<a href="https://www.facebook.com/jenniferquenaultreflexologue" class="facebook" target="_blank">
-				<i class="bi bi-facebook fs-2"></i>
-			</a>
+	<div class="networks d-flex align-items-center">
+		<div class="d-flex flex-column align-items-center">
+			<span class="text-light fs-4 m-1 mt-3">Retrouvez-moi sur mes réseaux</span>
+			<div class="links d-flex w-100 justify-content-around my-1">
+				<a href="https://www.instagram.com/voyage_des_sens_reflexologie/" class="instagram" target="_blank">
+					<i class="bi bi-instagram fs-2"></i>
+				</a>
+				<a href="https://www.facebook.com/jenniferquenaultreflexologue" class="facebook" target="_blank">
+					<i class="bi bi-facebook fs-2"></i>
+				</a>
+			</div>
+			<a href="#" class="legal-notice m-1">Mentions légales</a>
+			<a href="#" class="general-conditions m-1 mb-3">Conditions générales</a>
 		</div>
-		<a href="#" class="legal-notice m-1">Mentions légales</a>
-		<a href="#" class="general-conditions m-1 mb-3">Conditions générales</a>
+		{% if app.user %}
+			<a class="btn btn-secondary ms-5" href="{{ path('app_logout') }}">
+				<i class="bi bi-box-arrow-left me-2"></i>Déconnexion</a>
+		{% else %}
+			<a class="btn btn-secondary ms-5" href="{{ path('login') }}">
+				<i class="bi bi-shield-lock-fill me-2"></i></i>Espace admin</a>
+		{% endif %}
 	</div>
+
 </footer>
