--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,23 +1,48 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Connexion -
+	{{ parent() }}
+{% endblock %}
+
 {% block body %}
-	{% if error %}
-		<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-	{% endif %}
+	<main class="container">
+		<div class="row text-center mb-4 mt-3">
+			<h1 class="mt-3">Espace administrateur</h1>
+		</div>
 
-	<form action="{{ path('login') }}" method="post">
-		<label for="username">Email:</label>
-		<input type="text" id="username" name="_username" value="{{ last_username }}"/>
+		<div class="row">
+			{% if error %}
+				<div class="alert alert-danger my-2 col-lg-6 offset-lg-3">
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewbox="0 0 16 16" role="img" aria-label="Warning:">
+						<path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+					</svg>
+					{{ error.messageKey|trans(error.messageData, 'security') }}
+				</div>
+			{% endif %}
+		</div>
 
-		<label for="password">Password:</label>
-		<input
-		type="password" id="password" name="_password"/>
+		<div class="card mb-5 col-lg-6 offset-lg-3 rounded-2">
+			<div class="card-text p-3 mb-2 rounded-top d-flex justify-content-center align-content-center">
+				<p class="mb-0">Connexion</p>
+			</div>
+			<form action="{{ path('login') }}" method="post" class="d-flex flex-column mt-2 mb-4 container">
+				<div class="form-floating mb-4">
+					<input type="email" class="form-control" name="_username" id="username" placeholder="name@example.com">
+					<label for="floatingInput">Email</label>
+				</div>
+				<div class="form-floating mb-3">
+					<input type="password" class="form-control" name="_password" id="password" placeholder="Password">
+					<label for="floatingPassword">Mot de passe</label>
+					{# <p class="text-end">
+						<a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a>
+					</p> #}
+				</div>
+				<button class="btn btn-primary col-sm-4 offset-sm-4">Se connecter</button>
+			</form>
+			{# <p class="text-center">Pas de compte ?
+				<a href="{{ path('app_register') }}">Inscrivez-vous</a>
+			</p> #}
+		</div>
 
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-		{# If you want to control the URL the user is redirected to on success
-		        <input type="hidden" name="_target_path" value="/account"/> #}
-
-		<button type="submit">login</button>
-	</form>
+	</main>
 {% endblock %}
