--- a/templates/items/_header.html.twig
+++ b/templates/items/_header.html.twig
@@ -3,5 +3,5 @@
 {% endblock %}
 <img class="banner" src="{{ asset('build/images/header.jpg') }}" alt="">
 <h2 class="headerText fs-1 text-light d-flex align-items-center justify-content-center align-self-center">
-	<i>"La réflexologie, c'est super je trouve"</i>
+	<i>Prenez rendez-vous avec votre bien-être !</i>
 </h2>
