--- a/templates/items/_navbarAdmin.html.twig
+++ b/templates/items/_navbarAdmin.html.twig
@@ -12,14 +12,9 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<div class="navbar-nav">
-				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="{{ path('home') }}">Accueil</a>
-				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="{{ path('journey') }}">Mon parcours</a>
-				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="#">Réflexologie</a>
-				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="{{ path('session_index') }}">Prestations</a>
-				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="#">Tarifs</a>
-				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="#">Offrir</a>
-				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="{{ path('contact') }}">Contact</a>
-				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="{{ path('actuality_index') }}">Actualités</a>
+				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="{{ path('admin_actuality_index') }}">Actualités</a>
+				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="{{ path('admin_category_index') }}">Catégories de prestations</a>
+				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="{{ path('admin_session_index') }}">Prestations</a>
 			</div>
 		</div>
 	</div>
