--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 	<main class="container">
 		<div class="row text-center mb-4 mt-3">
-			<h1 class="mt-3">Espace administrateur</h1>
+			<h1 class="mt-3 text-primary">Espace administrateur</h1>
 		</div>
 
 		<div class="row">
@@ -22,7 +22,7 @@
 		</div>
 
 		<div class="card mb-5 col-lg-6 offset-lg-3 rounded-2">
-			<div class="card-text p-3 mb-2 rounded-top d-flex justify-content-center align-content-center">
+			<div class="card-text p-3 mb-2 rounded-top d-flex justify-content-center bg-primary text-light align-content-center">
 				<p class="mb-0">Connexion</p>
 			</div>
 			<form action="{{ path('login') }}" method="post" class="d-flex flex-column mt-2 mb-4 container">
@@ -34,14 +34,16 @@
 					<input type="password" class="form-control" name="_password" id="password" placeholder="Password">
 					<label for="floatingPassword">Mot de passe</label>
 					{# <p class="text-end">
-						<a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a>
-					</p> #}
+											<a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a>
+										</p> #}
 				</div>
-				<button class="btn btn-primary col-sm-4 offset-sm-4">Se connecter</button>
+				<button class="btn btn-secondary col-sm-4 offset-sm-4">Se connecter</button>
+				<input type="hidden" name="_target_path" value="{{ path('admin_index') }}"/>
+				<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 			</form>
 			{# <p class="text-center">Pas de compte ?
-				<a href="{{ path('app_register') }}">Inscrivez-vous</a>
-			</p> #}
+							<a href="{{ path('app_register') }}">Inscrivez-vous</a>
+						</p> #}
 		</div>
 
 	</main>
