fini je crois (faux)

--- a/assets/styles/session.scss
+++ b/assets/styles/session.scss
@@ -1,10 +1,5 @@
 @import "variables.scss";
 
-.sessionsBody {
-    // background-image     : url("../images/VDS_Motif_Terre.svg");
-    // background-size      : cover;
-
-    h2 {
-        border-bottom: 4px solid $secondary;
-    }
+.categoryTitle {
+    border-bottom: 4px solid $secondary;
 }
