--- a/assets/styles/footer.scss
+++ b/assets/styles/footer.scss
@@ -2,12 +2,16 @@
 
 .footer {
     a {
-        color     : $light;
-        transition: color 0.15s ease-in-out;
+        color          : $light;
+        transition     : color 0.15s ease-in-out;
         text-decoration: none;
 
         &:hover {
             color: $secondary;
         }
+    }
+
+    .adminLogo img {
+        height: 100px;
     }
 }
