--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,7 +14,7 @@
 
 {% block body %}
 
-	<h1 class="text-secondary text-center my-3">Bienvenue</h1>
+	<h1 class="text-primary text-center my-4">Les dernières actualités</h1>
 	<div class="d-flex flex-column align-items-center">
 		{% include "items/_actualityCards.html.twig" %}
 	</div>
