--- a/templates/items/_footer.html.twig
+++ b/templates/items/_footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="footer container-fluid footer-expand-lg bg-primary sticky-bottom d-flex justify-content-around mt-5" id="footer">
+<footer class="footer container-fluid footer-expand-lg bg-primary sticky-bottom d-flex flex-lg-row flex-column justify-content-around align-items-center mt-5" id="footer">
 	<div class="details d-flex flex-column">
 		<span class="text-center m-1 mt-3 text-light fs-4">Jennifer Quenault - Réflexologue</span>
 		<span class="m-1 text-light">
@@ -8,7 +8,7 @@
 		<span class="m-1 mb-3 text-light">
 			<i class="bi bi-envelope-fill me-3"></i>voyagedessens.reflexo@gmail.com</span>
 	</div>
-	<div class="networks d-flex align-items-center">
+	<div class="networks d-flex justify-content-between">
 		<div class="d-flex flex-column align-items-center">
 			<span class="text-light fs-4 m-1 mt-3">Retrouvez-moi sur mes réseaux</span>
 			<div class="links d-flex w-100 justify-content-around my-1">
@@ -22,12 +22,20 @@
 			<a href="#" class="legal-notice m-1">Mentions légales</a>
 			<a href="#" class="general-conditions m-1 mb-3">Conditions générales</a>
 		</div>
+	</div>
+	<div class="adminLogo d-flex flex-column justify-content-around align-items-center">
+		<img class="mb-4" src="{{ asset('build/images/VDS_Badge_Marigold.svg') }}" alt="">
 		{% if app.user %}
-			<a class="btn btn-secondary ms-5" href="{{ path('app_logout') }}">
-				<i class="bi bi-box-arrow-left me-2"></i>Déconnexion</a>
+			<div class="d-flex">
+				<a class="btn btn-secondary text-dark" href="{{ path('app_logout') }}">
+					<i class="bi bi-box-arrow-left me-2"></i>Déconnexion</a>
+				<a class="btn btn-secondary text-dark ms-2" href="{{ path('admin_index') }}">
+					<i class="bi bi-house"></i>
+				</a>
+			</div>
 		{% else %}
-			<a class="btn btn-secondary ms-5" href="{{ path('login') }}">
-				<i class="bi bi-shield-lock-fill me-2"></i></i>Espace admin</a>
+			<a class="btn btn-secondary text-dark" href="{{ path('login') }}">
+				<i class="bi bi-shield-lock-fill me-2"></i>Espace admin</a>
 		{% endif %}
 	</div>
 
