--- a/templates/admin_actuality/edit.html.twig
+++ b/templates/admin_actuality/edit.html.twig
@@ -10,7 +10,7 @@
 
 {% block body %}
 	<main class="container my-5">
-		<h1 class="text-center text-secondary">Edition actualité</h1>
+		<h1 class="text-center text-primary">Edition actualité</h1>
 		{{ include('admin_actuality/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 		<div class="d-flex justify-content-start">
 			<a class="btn btn-primary mt-3" href="{{ path('admin_actuality_index') }}"><i class="bi bi-caret-left-square-fill me-2"></i>Retour à la liste</a>
