--- a/templates/admin_actuality/_adminActualityCards.html.twig
+++ b/templates/admin_actuality/_adminActualityCards.html.twig
@@ -8,9 +8,9 @@
 			</div>
 		</div>
 		<div class="col-1 d-flex flex-column align-items-center justify-content-start">
-			<a class="btn btn-secondary my-3 fs-4" href="{{ path('actuality_show', {'id': actuality.id}) }}">
+			{# <a class="btn btn-secondary my-3 fs-4" href="{{ path('actuality_show', {'id': actuality.id}) }}">
 				<i class="bi bi-eye"></i>
-			</a>
+			</a> #}
 			<a class="btn btn-primary my-3 fs-4" href="{{ path('admin_actuality_edit', {'id': actuality.id}) }}">
 				<i class="bi bi-pencil-square"></i>
 			</a>
