--- a/templates/admin_category/edit.html.twig
+++ b/templates/admin_category/edit.html.twig
@@ -8,7 +8,7 @@
 
 {% block body %}
 	<main class="container my-5">
-		<h1 class="text-center">Modifier une catégorie</h1>
+		<h1 class="text-center text-primary">Modifier une catégorie</h1>
 		<div class="col-md-6 offset-md-3 fs-4 my-5 bg-light border rounded p-3 border-primary">
 			{{ include('admin_category/_form.html.twig') }}
 		</div>
