replaced openstreetmap with google maps

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -13,9 +13,7 @@
 				<i class="bi bi-telephone-fill me-3"></i>06 32 56 01 27</span>
 			<span class="m-1 mb-3 text-light fs-5">
 				<i class="bi bi-envelope-fill me-3"></i>voyagedessens.reflexo@gmail.com</span>
-			<iframe class="w-100 h-100 map align-middle" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=1.9869133830070498%2C46.57922320873007%2C1.9897592067718508%2C46.580530318763195&amp;layer=mapnik&amp;marker=46.57987855483314%2C1.9883384359491174" style="border: 1px solid black"></iframe><br/><small>
-				<a href="https://www.openstreetmap.org/?mlat=46.57988&amp;mlon=1.98834#map=19/46.57988/1.98834">Afficher une carte plus grande</a>
-			</small>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2742.3559881129563!2d1.9865851174438478!3d46.58019949999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fa4dfa7e60b273%3A0xc708db1187c2870f!2sVoyage%20des%20Sens%20-%20R%C3%A9flexologie!5e0!3m2!1sfr!2sfr!4v1647262107202!5m2!1sfr!2sfr" width="auto" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 		</div>
 	</div>
 {% endblock %}
