--- a/assets/styles/navbar.scss
+++ b/assets/styles/navbar.scss
@@ -1,16 +1,24 @@
 @import "variables.scss";
 
-.topHeader {
-    box-shadow           : 0px 0px 8px -2px $primary;
-    background-image     : url("../images/VDS_Motif_Marigold.svg");
-    background-size      : cover;
-    background-position  : center;
-
-    img {
-        height: 100px;
-    }
-}
-
 .navbar {
-    box-shadow: 0px 0px 8px -2px black;
+    font-weight: 500;
+    box-shadow : 0px 0px 8px -2px black;
+
+    .topHeader {
+        box-shadow         : 0px 0px 8px -2px $primary;
+        background-image   : url("../images/VDS_Motif_Marigold.svg");
+        background-size    : cover;
+        background-position: center;
+
+        img {
+            height: 50px;
+        }
+    }
+
+    div div .navbar-nav .nav-link {
+        &:hover {
+            color           : $secondary;
+            background-color: $primary;
+        }
+    }
 }
