--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<h1 class="text-primary text-center my-4">Contact</h1>
+	<h1 class="text-primary text-center my-5 fs-1">
+		<span class="pageTitle border border-primary rounded p-2">Contact</span>
+	</h1>
 	<div class="d-flex flex-column flex-lg-row">
 		<div class="col-lg-7">
 			{% include "contact/_form.html.twig" %}
