--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -1,11 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Prestations - {{ parent() }}{% endblock %}
+{% block title %}Prestations -
+	{{ parent() }}
+{% endblock %}
 
 {% block stylesheets %}
 	{{ encore_entry_link_tags('session') }}
 {% endblock %}
 
 {% block body %}
-{% include "session/_sessionCards.html.twig" %}
+	<h1 class="text-center text-primary sessionsTitle my-5 fs-1" id="particular">
+		<span class="pageTitle border border-primary rounded p-2">Prestations</span>
+	</h1>
+	{% include "session/_sessionCards.html.twig" %}
 {% endblock %}
