--- a/templates/contact/_form.html.twig
+++ b/templates/contact/_form.html.twig
@@ -8,6 +8,7 @@
 		<div class="col-md-6">{{ form_row(form.phone) }}</div>
 		<div class="col-md-6">{{ form_row(form.mail) }}</div>
 	</div>
+	{{ form_row(form.reason) }}
 	{{ form_row(form.message) }}
 	<button class="btn btn-secondary">Envoyer</button>
 </div>
