--- a/assets/styles/contact.scss
+++ b/assets/styles/contact.scss
@@ -1,5 +1,7 @@
 @import "variables.scss";
 
-.contactMap {
+.contactElement {
     box-shadow: $shadow-card;
+    border: 4px solid $secondary;
+    border-radius: $spacing;
 }
