--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,8 +21,9 @@
 			{% include "items/_navbar.html.twig" %}
 		{% endblock %}
 		{% block header %}{% endblock %}
-		<main class="container"> {% block body %}{% endblock %}
-			</main>
+		<main class="container p-0"> {% block body %}{% endblock %}
+		
+		</main>
 			{% block footer %}
 				{% include "items/_footer.html.twig" %}
 			{% endblock %}
