--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -9,8 +9,6 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="text-center text-primary sessionsTitle my-5 fs-1" id="particular">
-		<span class="pageTitle border border-primary rounded p-2">Prestations</span>
-	</h1>
+	<h1 class="pageTitle text-primary my-5 fs-1">Prestations</h1>
 	{% include "session/_sessionCards.html.twig" %}
 {% endblock %}
