--- a/templates/actuality/index.html.twig
+++ b/templates/actuality/index.html.twig
@@ -9,10 +9,7 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="text-primary text-center my-5 fs-1">
-		<span class="pageTitle border border-primary rounded p-2">
-			Toutes les actualités</span>
-	</h1>
+	<h1 class="pageTitle text-primary my-5 fs-1">Toutes les actualités</h1>
 	<div class="d-flex flex-column align-items-center">
 		{% include "items/_actualityCards.html.twig" %}
 	</div>
