--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,9 +14,7 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="latestActualities text-primary text-center my-5 fs-1">
-		<span class="pageTitle border border-primary rounded p-2">Les dernières actualités</span>
-	</h1>
+	<h1 class="latestActualities pageTitle text-primary my-5 fs-1">Les dernières actualités</h1>
 	<div class="d-flex flex-column align-items-center">
 		{% include "items/_actualityCards.html.twig" %}
 	</div>
