fixed the rows overlapping container

--- a/templates/contact/_form.html.twig
+++ b/templates/contact/_form.html.twig
@@ -1,5 +1,5 @@
-{{ form_start(form) }}
-<div class="contactElement bg-white p-4 rounded">
+<div class="contactElement col-lg-7 bg-white p-4 rounded">
+	{{ form_start(form) }}
 	<div class="row mb-3">
 		<div class="input-group">
 			<div class="input-group-prepend">
@@ -38,5 +38,5 @@
 	<div class="row justify-content-end m-0">
 		<button class="btn btn-primary col-2">Envoyer</button>
 	</div>
+	{{ form_end(form) }}
 </div>
-{{ form_end(form) }}
