--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -10,10 +10,8 @@
 
 {% block body %}
 	<h1 class="pageTitle text-primary my-5 fs-1">Contact</h1>
-	<div class="row justify-content-between">
-		<div class="col-lg-7 p-0">
-			{% include "contact/_form.html.twig" %}
-		</div>
+	<div class="row justify-content-between m-0">
+		{% include "contact/_form.html.twig" %}
 		<div class="contactElement col-lg-5 p-0 rounded">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2742.3559881129563!2d1.9865851174438478!3d46.58019949999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fa4dfa7e60b273%3A0xc708db1187c2870f!2sVoyage%20des%20Sens%20-%20R%C3%A9flexologie!5e0!3m2!1sfr!2sfr!4v1647262107202!5m2!1sfr!2sfr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 		</div>
