sessions are cleaner

--- a/assets/styles/contact.scss
+++ b/assets/styles/contact.scss
@@ -1,7 +1,21 @@
 @import "variables.scss";
 
 .contactElement {
-    box-shadow: $shadow-card;
-    border: 4px solid $secondary;
+    box-shadow   : $shadow-card;
+    border       : 4px solid $secondary;
     border-radius: $spacing;
+}
+
+.formButton {
+    width: fit-content;
+}
+
+@media screen and (max-width: 991px) {
+    .contactMap {
+        min-height: 350px;
+    }
+
+    .formButton {
+        width: 100%;
+    }
 }
