--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
 			{% include "items/_navbar.html.twig" %}
 		{% endblock %}
 		{% block header %}{% endblock %}
-		<main class="container p-0"> {% block body %}{% endblock %}
+		<main class="container"> {% block body %}{% endblock %}
 		
 		</main>
 			{% block footer %}
