--- a/templates/session/_sessionCards.html.twig
+++ b/templates/session/_sessionCards.html.twig
@@ -1,29 +1,27 @@
-<div class="sessionsBody d-flex flex-column gap-5">
+<div class="row gap-5 m-0">
 	{% for category in categories %}
-		<div class="row justify-content-start bg-light rounded p-2 border border-primary m-0">
-			<h2 class="categoryTitle text-primary pb-2">{{category.title }}</h2>
-			<p class="ms-3 pt-2">{{ category.description|nl2br }}</p>
-			{% if category.sessions is defined %}
-				<div class="card-body session-body py-md-3 px-md-4 p-lg-4">
-					<ul class="list-unstyled accordion accordion-flush" id="accordionServices{{ category.id }}">
-						{% for session in category.sessions %}
-							<li class="accordion-item">
-								<div class="accordion-header" id="heading{{ session.id }}">
-									<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ session.id }}" aria-expanded="false" aria-controls="collapse{{ session.id }}">
-										<i class="sessionIcon bi bi-arrow-right-circle-fill me-3 text-secondary"></i>
-										{{ session.title }}
-									</button>
-								</div>
-								<div id="collapse{{ session.id }}" class="accordion-collapse collapse" aria-labelledby="heading{{ session.id }}" data-bs-parent="#accordionServices{{ category.id }}">
-									<div class="accordion-body">
-										{{ session.description|nl2br }}
-									</div>
-								</div>
-							</li>
-						{% endfor %}
-					{% endif %}
-				</ul>
-			</div>
+		<div class="row sessionsMain justify-content-start bg-light rounded p-3 m-0">
+			<h2 class="categoryTitle text-primary p-0 fs-2">{{ category.title }}</h2>
+			<p class="p-2 m-0">{{ category.description|nl2br }}</p>
+			{% if category.sessions is not empty %}
+				<ul class="list-unstyled accordion accordion-flush p-2 m-0" id="accordionServices{{ category.id }}">
+				{% endif %}
+				{% for session in category.sessions %}
+					<li class="accordion-item">
+						<div class="accordion-header" id="heading{{ session.id }}">
+							<button class="accordion-button collapsed ps-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ session.id }}" aria-expanded="false" aria-controls="collapse{{ session.id }}">
+								<i class="sessionIcon bi bi-plus-circle me-3 text-secondary"></i>
+								{{ session.title }}
+							</button>
+						</div>
+						<div id="collapse{{ session.id }}" class="accordion-collapse collapse" aria-labelledby="heading{{ session.id }}" data-bs-parent="#accordionServices{{ category.id }}">
+							<div class="accordion-body">
+								{{ session.description|nl2br }}
+							</div>
+						</div>
+					</li>
+				{% endfor %}
+			</ul>
 		</div>
 	{% endfor %}
 </div>
