--- a/templates/contact/_form.html.twig
+++ b/templates/contact/_form.html.twig
@@ -36,7 +36,7 @@
 	{{ form_row(form.reason) }}
 	{{ form_row(form.message) }}
 	<div class="row justify-content-end m-0">
-		<button class="btn btn-primary col-2">Envoyer</button>
+		<button class="formButton btn btn-primary col-12 col-lg-2">Envoyer</button>
 	</div>
 	{{ form_end(form) }}
 </div>
